# boot-selector-switch

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  flake.nix  rust-toolchain.toml
boot-selector-switch-efi-shim/: Cargo.toml
boot-selector-switch-efi-shim/src/: config.rs  logger.rs  main.rs
efi-shim/: Cargo.toml
efi-shim/src/: main.rs
nixos-module/: default.nix  test-vm.nix
pico-firmware/: Cargo.toml
pico-firmware/.cargo/: config.toml
pico-firmware/src/: hid_descriptor.rs  main.rs
test-efi-stub/: Cargo.toml  crate.nix
test-efi-stub/src/: logger.rs  main.rs
test-vm/: loader.conf
test-vm/entries/: fedora.conf  nixos-current.conf  windows.conf
virtual-switch/: Cargo.toml
virtual-switch/src/: descriptors.rs  handler.rs  main.rs
